feat: add index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         để deploy. - Có nhiều dự án sử dụng chức năng tự động deploy của
         CircleCI rất hiệu quả. Cách làm này tiết kiệm thời gian và cải thiện
         workflow trong team.
-      </p>
+      </p>Khánh đã làm phần này
       >>>>>>> 652cbfa6ca359538da3faed936500006659b9269
       <p>aaaaaaaaaaaaaaaaa 123 dss</p>
 
